tests/build/cases/ui_node/invalid_args.stderr
error: expected `child`, `children`, `delegate`, or, `delegate_list`
 --> cases/ui_node/invalid_args.rs:4:11
  |
4 | #[ui_node(invalid_arg)]
  |           ^^^^^^^^^^^

warning: unused import: `widget_instance::UiNode`
 --> cases/ui_node/invalid_args.rs:1:30
  |
1 | use zero_ui::core::{ui_node, widget_instance::UiNode};
  |                              ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
